# cloud-run-python-template

./: .flake8  .gitignore  Dockerfile  README.md  cloudbuild.yaml  compose.yaml  docker-compose.yaml  invoke.yaml  pyproject.toml  tasks.py
.github/workflows/: config.yaml
app/: main.py
server/: context.py  logging.py  main.py  middleware.py  otel.py
tasks/: __init__.py
