[tool.poetry]
name = "cloud-run-python-examples"
version = "0.1.0"
description = ""
authors = ["sfujiwara <shuhei.fujiwara@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "3.10.11"
fastapi = "^0.100.0"
invoke = "2.0.0"
uvicorn = "^0.23.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
