[project]
name = "cloud-run-python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.125.0",
    "google-cloud-logging>=3.13.0",
    "invoke>=2.2.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "types-invoke>=2.0.0.10",
]
